fix card footer spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -203,6 +203,6 @@ iframe {
   padding-bottom: 36px !important;
 }
 
-.frame-decor .footer-abs {
+.frame-decor .footer-abs > * {
   bottom: 36px !important;
 }
